--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -67,7 +67,7 @@ include "../../include/dbconn.html";
 
             <!-- HEADER_LEFT -->
             <h1 id="header_left">
-                <a href="../main/index.html"><img src="../images/common/logo_01.svg" alt="회사 로고"></a>
+                <a href="../main/index.html"><img loading="lazy" src="../images/common/logo_01.svg" alt="회사 로고"></a>
             </h1>
 
             <!-- HEADER_CENTER -->
@@ -115,7 +115,7 @@ include "../../include/dbconn.html";
                 <article>
                     <nav class="status">
                         <a href="../member/login.html">
-                            <img src="../images/common/ico_login_01.svg" alt="">Log in
+                            <img loading="lazy" src="../images/common/ico_login_01.svg" alt="">Log in
                         </a>
                     </nav>
                     <nav class="menu">
@@ -163,17 +163,17 @@ include "../../include/dbconn.html";
                     <div class="point_xy">
                         <a href="#none" style="left: 53.3%; top:56.5%;">
                             <span>Circle Name</span>
-                            <span><img src="../images/common/ico_plus_02.svg" alt=""></span>
+                            <span><img loading="lazy" src="../images/common/ico_plus_02.svg" alt=""></span>
                         </a>
 
                         <a href="#none" style="left: 53%; top: 36%;">
                             <span>Material Name</span>
-                            <span><img src="../images/common/ico_plus_02.svg" alt=""></span>
+                            <span><img loading="lazy" src="../images/common/ico_plus_02.svg" alt=""></span>
                         </a>
 
                         <a href="#none" style="left: 78%; top: 34%;">
                             <span>Material Name</span>
-                            <span><img src="../images/common/ico_plus_02.svg" alt=""></span>
+                            <span><img loading="lazy" src="../images/common/ico_plus_02.svg" alt=""></span>
                         </a>
                     </div>
 
@@ -192,15 +192,15 @@ include "../../include/dbconn.html";
                             <div class="swiper-wrapper">
 
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_02.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_02.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_02.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_02.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_01.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_01.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                             </div>
@@ -210,15 +210,15 @@ include "../../include/dbconn.html";
                         <div class="swiper-container mo_1470">
                             <div class="swiper-wrapper">
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_02.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_02.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_02.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_02.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_01.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_01.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                             </div>
@@ -253,15 +253,15 @@ include "../../include/dbconn.html";
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_01.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_01.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_02.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_02.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                                 <figure class="swiper-slide">
-                                    <img src="../images/product/p_s_02.png" alt="">
+                                    <img loading="lazy" src="../images/product/p_s_02.png" alt="">
                                     <figcaption>FM-A166</figcaption>
                                 </figure>
                             </div>
@@ -298,8 +298,8 @@ include "../../include/dbconn.html";
                     </div>
 
                     <div class="img_wrap img_01">
-                        <img src="../images/main/sec_03_01_01.png" alt="">
-                        <img src="../images/main/sec_03_01_02.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_01_01.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_01_02.png" alt="">
                     </div>
                 </div>
 
@@ -322,10 +322,10 @@ include "../../include/dbconn.html";
                     </div>
 
                     <div class="img_wrap img_02">
-                        <img src="../images/main/sec_03_02_01.png" alt="">
-                        <img src="../images/main/sec_03_02_02.png" alt="">
-                        <img src="../images/main/sec_03_02_03.png" alt="">
-                        <img src="../images/main/sec_03_02_04.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_02_01.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_02_02.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_02_03.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_02_04.png" alt="">
                     </div>
                 </div>
 
@@ -346,10 +346,10 @@ include "../../include/dbconn.html";
                     </div>
 
                     <div class="img_wrap img_03">
-                        <img src="../images/main/sec_03_03_01.png" alt="">
-                        <img src="../images/main/sec_03_03_02.png" alt="">
-                        <img src="../images/main/sec_03_03_03.png" alt="">
-                        <img src="../images/main/sec_03_03_04.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_03_01.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_03_02.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_03_03.png" alt="">
+                        <img loading="lazy" src="../images/main/sec_03_03_04.png" alt="">
                     </div>
                 </div>
 
@@ -389,98 +389,98 @@ include "../../include/dbconn.html";
                 <div class="right">
                     <div class="sns_wrap active">
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=217" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-01.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-01.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CcFAymtp_yg/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-02.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-02.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=528" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-03.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-03.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/Cc18OqupNJ3/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-04.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-04.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/material/view.php?cate1_seq=7&amp;cate2_seq=39&amp;num=37" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-05.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-05.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CcpET6qpOu2/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-06.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-06.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/portfolio/view.php?&amp;page=1&amp;num=492" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-07.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-07.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CbJu_-ppr2p/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-08.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-08.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=565" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-09.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-09.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CcR5HSkpQCN/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-10.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-10.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=538" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-11.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-11.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CYVLc-XJ24o/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-12.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-12.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=555" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-13.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-13.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CbhC1mopWrB/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-14.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-14.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=546" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-15.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-15.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/Calu46ZJysS/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-16.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-16.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/material/view.php?cate1_seq=174&amp;cate2_seq=187&amp;num=517" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-17.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-17.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/Cb_3jSprAif/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-18.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-18.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/technique/view.php?num=42" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-19.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-19.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CbO8beuJBQg/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-20.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-20.jpg" alt=""></div>
                         </a>
 
                     </div>
 
                     <div class="sns_wrap">
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=538" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-11.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-11.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CYVLc-XJ24o/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-12.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-12.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=555" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-13.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-13.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CbhC1mopWrB/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-14.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-14.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/cmf_library/view.php?&amp;page=1&amp;num=546" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-15.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-15.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/Calu46ZJysS/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-16.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-16.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/material/view.php?cate1_seq=174&amp;cate2_seq=187&amp;num=517" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-17.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-17.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/Cb_3jSprAif/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-18.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-18.jpg" alt=""></div>
                         </a>
                         <a href="https://www.hidalab.com/technique/view.php?num=42" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-19.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-19.jpg" alt=""></div>
                         </a>
                         <a href="https://www.instagram.com/p/CbO8beuJBQg/" target="_blank">
-                            <div class="img"><img src="../images/sns/4.sns-20.jpg" alt=""></div>
+                            <div class="img"><img loading="lazy" src="../images/sns/4.sns-20.jpg" alt=""></div>
                         </a>
                     </div>
                 </div>
