gsap img lazy remove
gsap img lazy remove

--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -298,8 +298,8 @@ include "../../include/dbconn.html";
                     </div>
 
                     <div class="img_wrap img_01">
-                        <img loading="lazy" src="../images/main/sec_03_01_01.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_01_02.png" alt="">
+                        <img src="../images/main/sec_03_01_01.png" alt="">
+                        <img src="../images/main/sec_03_01_02.png" alt="">
                     </div>
                 </div>
 
@@ -322,10 +322,10 @@ include "../../include/dbconn.html";
                     </div>
 
                     <div class="img_wrap img_02">
-                        <img loading="lazy" src="../images/main/sec_03_02_01.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_02_02.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_02_03.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_02_04.png" alt="">
+                        <img src="../images/main/sec_03_02_01.png" alt="">
+                        <img src="../images/main/sec_03_02_02.png" alt="">
+                        <img src="../images/main/sec_03_02_03.png" alt="">
+                        <img src="../images/main/sec_03_02_04.png" alt="">
                     </div>
                 </div>
 
@@ -346,10 +346,10 @@ include "../../include/dbconn.html";
                     </div>
 
                     <div class="img_wrap img_03">
-                        <img loading="lazy" src="../images/main/sec_03_03_01.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_03_02.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_03_03.png" alt="">
-                        <img loading="lazy" src="../images/main/sec_03_03_04.png" alt="">
+                        <img src="../images/main/sec_03_03_01.png" alt="">
+                        <img src="../images/main/sec_03_03_02.png" alt="">
+                        <img src="../images/main/sec_03_03_03.png" alt="">
+                        <img src="../images/main/sec_03_03_04.png" alt="">
                     </div>
                 </div>
 
