--- a/kor/trend_library/detail.html
+++ b/kor/trend_library/detail.html
@@ -64,6 +64,7 @@ include "../../include/dbconn.html";
 
     <header id="header">
         <nav id="header_wrap">
+
             <!-- HEADER_LEFT -->
             <h1 id="header_left">
                 <a href="../main/index.html"><img src="../images/common/logo_01.svg" alt="회사 로고"></a>
@@ -73,16 +74,13 @@ include "../../include/dbconn.html";
             <ul id="header_center">
 
                 <li>
-                    <a href="#none">CMF Library</a>
+                    <a href="../cmf_library/list.html">CMF Library</a>
                 </li>
                 <li>
-                    <a href="#none">Trend Library</a>
+                    <a href="../trend_library/list.html">Trend Library</a>
                 </li>
                 <li>
-                    <a href="#none">Category</a>
-                </li>
-                <li>
-                    <a href="#none">Category</a>
+                    <a href="../category/list.html">Category</a>
                 </li>
                 <li>
                     <a href="#none">Portfolio</a>
@@ -119,9 +117,9 @@ include "../../include/dbconn.html";
                     </nav>
                     <nav class="menu">
                         <ul class="depth_01">
-                            <li><a href="">CMF Library</a></li>
-                            <li><a href="">Trend Library</a></li>
-                            <li><a href="">Category</a></li>
+                            <li><a href="../cmf_library/list.html">CMF Library</a></li>
+                            <li><a href="../trend_library/list.html">Trend Library</a></li>
+                            <li><a href="../category/list.html">Category</a></li>
                             <li><a href="">Portfolio</a></li>
                             <li><a href="">Contact</a></li>
                         </ul>
@@ -136,6 +134,7 @@ include "../../include/dbconn.html";
 
         </nav>
     </header>
+
 
     <main class="sub_page detail" id="trend_library">
         <section>
