--- a/kor/trend_library/list.html
+++ b/kor/trend_library/list.html
@@ -74,16 +74,13 @@ include "../../include/dbconn.html";
             <ul id="header_center">
 
                 <li>
-                    <a href="#none">CMF Library</a>
+                    <a href="../cmf_library/list.html">CMF Library</a>
                 </li>
                 <li>
-                    <a href="#none">Trend Library</a>
+                    <a href="../trend_library/list.html">Trend Library</a>
                 </li>
                 <li>
-                    <a href="#none">Category</a>
-                </li>
-                <li>
-                    <a href="#none">Category</a>
+                    <a href="../category/list.html">Category</a>
                 </li>
                 <li>
                     <a href="#none">Portfolio</a>
@@ -120,9 +117,9 @@ include "../../include/dbconn.html";
                     </nav>
                     <nav class="menu">
                         <ul class="depth_01">
-                            <li><a href="">CMF Library</a></li>
-                            <li><a href="">Trend Library</a></li>
-                            <li><a href="">Category</a></li>
+                            <li><a href="../cmf_library/list.html">CMF Library</a></li>
+                            <li><a href="../trend_library/list.html">Trend Library</a></li>
+                            <li><a href="../category/list.html">Category</a></li>
                             <li><a href="">Portfolio</a></li>
                             <li><a href="">Contact</a></li>
                         </ul>
@@ -157,42 +154,42 @@ include "../../include/dbconn.html";
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
+                                        <div class="img_wrap"><img src="../images/trend/mood_01.png" alt=""></div>
+                                        <!-- <div class="text_wrap">
                                             <figcaption>
                                                 <p class="top"><span>Coffee grounds, put to goof use</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
-                                        </div>
+                                        </div> -->
                                     </figure>
                                 </a>
                             </li>
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
+                                        <div class="img_wrap"><img src="../images/trend/mood_02.png" alt=""></div>
+                                        <!-- <div class="text_wrap">
                                             <figcaption>
                                                 <p class="top"><span>Coffee grounds, put to goof use</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
-                                        </div>
+                                        </div> -->
                                     </figure>
                                 </a>
                             </li>
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
-                                        <div class="text_wrap">
+                                        <div class="img_wrap"><img src="../images/trend/mood_03.png" alt=""></div>
+                                        <!-- <div class="text_wrap">
                                             <figcaption>
                                                 <p class="top"><span>Coffee grounds, put to goof use</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
-                                        </div>
+                                        </div> -->
                                     </figure>
                                 </a>
                             </li>
@@ -205,10 +202,10 @@ include "../../include/dbconn.html";
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
+                                        <div class="img_wrap"><img src="../images/trend/cmf_01.png" alt=""></div>
                                         <div class="text_wrap">
                                             <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
+                                                <p class="top"><span>Vibrant Ocean</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
@@ -219,10 +216,10 @@ include "../../include/dbconn.html";
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
+                                        <div class="img_wrap"><img src="../images/trend/cmf_02.png" alt=""></div>
                                         <div class="text_wrap">
                                             <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
+                                                <p class="top"><span>Lavender Shades</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
@@ -233,10 +230,10 @@ include "../../include/dbconn.html";
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
+                                        <div class="img_wrap"><img src="../images/trend/cmf_03.png" alt=""></div>
                                         <div class="text_wrap">
                                             <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
+                                                <p class="top"><span>High Gloss Coating</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
@@ -246,14 +243,14 @@ include "../../include/dbconn.html";
                             </li>
                         </ul>
                     </div>
-                    
+
                     <div class="con con_01">
                         <h2><a href="">Newsletter Archive <img src="../images/common/ico_arrow_02.svg" alt=""></a></h2>
                         <ul>
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
+                                        <div class="img_wrap"><img src="../images/trend/news_01.png" alt=""></div>
                                         <div class="text_wrap">
                                             <figcaption>
                                                 <p class="top"><span>Coffee grounds, put to goof use</span></p>
@@ -265,12 +262,13 @@ include "../../include/dbconn.html";
                                 </a>
                             </li>
                             <li>
+
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
+                                        <div class="img_wrap"><img src="../images/trend/news_02.png" alt=""></div>
                                         <div class="text_wrap">
                                             <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
+                                                <p class="top"><span>The return of logo play</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
@@ -281,10 +279,10 @@ include "../../include/dbconn.html";
                             <li>
                                 <a href="./list_detail.html">
                                     <figure>
-                                        <div class="img_wrap"><img src="../images/main/mv_mo_01.png" alt=""></div>
+                                        <div class="img_wrap"><img src="../images/trend/news_03.png" alt=""></div>
                                         <div class="text_wrap">
                                             <figcaption>
-                                                <p class="top"><span>Coffee grounds, put to goof use</span></p>
+                                                <p class="top"><span>No Trash It’s Treasure</span></p>
                                                 <p class="bottom">Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant OceanVibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant Ocean Vibrant ...</p>
                                                 <p class="arrow"><img src="../images/common/ico_arrow_04.svg" alt=""></p>
                                             </figcaption>
